--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: John Doe # your name (or website title) here
+title: Vishakh Pillai # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Incoming Data Scientist, Engineer 
   <br><br>
-  Second description 
+  Hi! I'm Vish and this is my portfolio showcasing my school projects and notebooks. I just recieved my Masters' in Information and Data Science (MIDS) from UC Berkeley and for the last three years, I've been working in Phoenix, AZ as a Yield Analysis Engineer at Intel Corporation.
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/vishakh-pillai/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
