--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   Hi! I'm Vish and this is my portfolio showcasing my school projects and notebooks. I just recieved my Masters' in Information and Data Science (MIDS) from UC Berkeley and for the last three years, I've been working in Phoenix, AZ as a Yield Analysis Engineer at Intel Corporation. My hobbies and interests involve volunteering for the Citizens' Climate Lobby, learning music, and exploring new cuisines and cultures.  
   <br><br>
   <br><br>
+  <a href="https://github.com/vishpillai123/vishpillai123.io/blob/master/resume.pdf">View My Resume</a> 
+  <br><br>
   <a href="https://www.linkedin.com/in/vishakh-pillai/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
