--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Vishakh Pillai # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Incoming Data Scientist / Analyst
+  Data Scientist
   <br><br>
-  Hi! I'm Vish and this is my portfolio showcasing my school projects and notebooks. I just recieved my Masters' in Information and Data Science (MIDS) from UC Berkeley and for the last three years, I've been working in Phoenix, AZ as a Yield Analysis Engineer at Intel Corporation. My hobbies and interests involve volunteering for the Citizens' Climate Lobby, learning music, and exploring new cuisines and cultures.  
+  Hi! This is my repo and portfolio showcasing my work from my Master's program, referred to as Master's in Information and Data Science (MIDS) from UC Berkeley. I currently live and work remotely in New York City. My hobbies and interests involve volunteering for the The City Tutors organization, learning music, and exploring new cuisines and cultures.  
   <br><br>
   <a href="pdfs/resume.pdf">View My Resume</a> 
   <br><br>
