--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Vishakh Pillai # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/linkedin_photo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Scientist
   <br><br>
