--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Hi! I'm Vish, a Data Scientist at Intel Corporation. This is my repo and portfolio showcasing my work from my Master's program, referred to as Master's in Information and Data Science (MIDS) from UC Berkeley. I currently live and work remotely in New York City. My hobbies and interests involve volunteering for the The City Tutors organization, learning music, and exploring new cuisines and cultures.  
   <br><br>
-  <a href="pdfs/resume.pdf">View My Resume</a> 
+  <a href="pdfs/resume04.pdf">View My Resume</a> 
   <br><br>
   <a href="https://www.linkedin.com/in/vishakh-pillai/">View My LinkedIn Profile</a> 
   
