--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,9 @@ logo: "/images/linkedin_photo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Scientist
   <br><br>
-  Hi! I'm Vish, a Data Scientist at Intel Corporation. This is my repo and portfolio showcasing my work from my Master's program, referred to as Master's in Information and Data Science (MIDS) from UC Berkeley. I currently live and work remotely in New York City. My hobbies and interests involve volunteering for the The City Tutors organization, learning music, and exploring new cuisines and cultures.  
+  Hi! I'm Vish, a Data Scientist at Intel Corporation. This is my repo and portfolio showcasing my work from my Master's program, referred to as Master's in Information and Data Science (MIDS) from UC Berkeley. 
+  <br><br>
+  I currently live and work remotely in New York City. My hobbies and interests involve volunteering for the The City Tutors organization, learning music, and exploring new cuisines and cultures.  
   <br><br>
   <a href="pdfs/resume04.pdf">View My Resume</a> 
   <br><br>
