--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Vishakh Pillai # your name (or website title) here
 logo: "/images/linkedin_photo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Hi! I'm Vish, a Data Scientist at Intel Corporation. This is my repo and portfolio showcasing my work from my Master's program, referred to as Master's in Information and Data Science (MIDS) from UC Berkeley. 
+  Hello, I'm Vish, a Data Scientist at Intel. My portfolio showcases the work I completed in my Masters in Information and Data Science (MIDS) program at UC Berkeley.
   <br><br>
-  I currently live and work remotely in New York City. My hobbies and interests involve volunteering for the The City Tutors organization, learning music, and exploring new cuisines and cultures.  
+  Based in New York City, I spend my free time tutoring underserved populations and improving my skills in jazz piano. One of my passions is carrying on my family's legacy of cooking South-Indian cuisine while adapting the recipes to my plant-based diet.
   <br><br>
   <a href="pdfs/resume04.pdf">View My Resume</a> 
   <br><br>
