--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   <a href="pdfs/resume04.pdf">View My Resume</a> 
   <br><br>
   <a href="https://www.linkedin.com/in/vishakh-pillai/">View My LinkedIn Profile</a> 
+  <br><br>
+  <a href="https://github.com/vishpillai123/ghg_forecasting">View My Recent Github Time-Series Project</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
