--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <a href="https://www.linkedin.com/in/vishakh-pillai/">View My LinkedIn Profile</a> 
   <br><br>
-  <a href="https://github.com/vishpillai123/ghg_forecasting">View My Recent Github Emissions Forecasting Project</a> 
+  <a href="https://github.com/vishpillai123/ghg_forecasting">View My Recent Github Project</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
