--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Based in New York City, I spend my free time tutoring underserved populations and improving my skills in jazz piano. One of my passions is carrying on my family's legacy of cooking South-Indian cuisine while adapting the recipes to my plant-based diet.
   <br><br>
-  <a href="pdfs/resume04.pdf">View My Resume</a> 
+  <a href="pdfs/resume.pdf">View My Resume</a> 
   <br><br>
   <a href="https://www.linkedin.com/in/vishakh-pillai/">View My LinkedIn Profile</a> 
   <br><br>
