--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Vishakh Pillai # your name (or website title) here
 logo: "/images/linkedin_photo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Hello, I'm Vish, a Data Scientist. My portfolio showcases the work I completed in my Masters in Information and Data Science (MIDS) program at UC Berkeley.
+  Hello, I'm Vish, an incoming Data Scientist at DataKind. My portfolio showcases the work I completed in my Masters in Information and Data Science (MIDS) program at UC Berkeley.
   <br><br>
   Based in New York City, I spend my free time tutoring underserved populations and improving my skills in jazz piano. One of my passions is carrying on my family's legacy of cooking South-Indian cuisine while adapting the recipes to my plant-based diet.
   <br><br>
